SelectStatementExecutionTest was fixed.